--- a/files.html
+++ b/files.html
@@ -334,7 +334,7 @@
 
     <div class="mails"><i class="fa-solid fa-envelope"></i></div>
 
-    <div><img class="avatar" src="D:/avatar.jpg"></div>
+    <div><img class="avatar" src="/avatar.jpg"></div>
     
     <script>
         document.querySelector('.scroll').addEventListener('wheel', (event) => {
@@ -361,4 +361,5 @@
         });
     </script>
 </body>
+
 </html>
