--- a/files.html
+++ b/files.html
@@ -334,7 +334,7 @@
 
     <div class="mails"><i class="fa-solid fa-envelope"></i></div>
 
-    <div><img class="avatar" src="/avatar.jpg"></div>
+    <div><img class="avatar" src="https://winnie2802.github.io/Website-Visualization/avatar.jpg"></div>
     
     <script>
         document.querySelector('.scroll').addEventListener('wheel', (event) => {
@@ -363,3 +363,4 @@
 </body>
 
 </html>
+
