--- a/community.html
+++ b/community.html
@@ -49,7 +49,7 @@
             transform: translateY(150px);
         }
         .bottomStickyNavigationBar.hidden .hide {
-            top: -80px;
+            top: -70px;
         }
 
         .scroll {
@@ -188,15 +188,16 @@
             background-color: white;
 
             width: 60px;
-            height: 30px;
+            height: 20px;
 
             text-align: center;
             align-content: center;
 
-            border-radius: 0 10px 0 0;
+            border-radius: 10px 10px 0 0;
 
             position: absolute;
-            top: -30px;
+            top: -23px;
+            left: calc(50% - 30px);
 
             cursor: pointer;
             z-index: 2;
