--- a/community.html
+++ b/community.html
@@ -205,6 +205,43 @@
             transition: top 1s ease-in-out;
         }
 
+        .settings {
+            color: white;
+
+            font-size: 26px;
+
+            position: fixed;
+            top: 30px;
+            right: 120px;
+
+            cursor: pointer;
+        }
+
+        .mails {
+            color: white;
+
+            font-size: 26px;
+
+            position: fixed;
+            top: 30px;
+            right: 206px;
+
+            cursor: pointer;
+        }
+
+        .avatar {
+            width: 60px;
+            height: 60px;
+
+            border: 6px solid #a680b8;
+            
+            position: fixed;
+            top: 30px;
+            left: 120px;
+
+            cursor: pointer;
+        }
+
         @media (max-width: 900px) and (orientation: portrait) {
             body::before {
                 content: "Please rotate your device to landscape mode.";
@@ -256,6 +293,12 @@
 
         <div class="hide"><i class="fa-solid fa-angles-down"></i></div>
     </div>
+
+    <div class="settings"><i class="fa-solid fa-gear"></i></div>
+
+    <div class="mails"><i class="fa-solid fa-envelope"></i></div>
+
+    <div><img class="avatar" src="D:/avatar.jpg"></div>
     
     <script>
         document.querySelector('.scroll').addEventListener('wheel', (event) => {
