--- a/community.html
+++ b/community.html
@@ -298,7 +298,7 @@
 
     <div class="mails"><i class="fa-solid fa-envelope"></i></div>
 
-    <div><img class="avatar" src="D:/avatar.jpg"></div>
+    <div><img class="avatar" src="https://winnie2802.github.io/Website-Visualization/avatar.jpg"></div>
     
     <script>
         document.querySelector('.scroll').addEventListener('wheel', (event) => {
@@ -326,3 +326,4 @@
     </script>
 </body>
 </html>
+
