--- a/files.html
+++ b/files.html
@@ -333,6 +333,8 @@
                 width: 100vw;
                 height: 100vh;
 
+                margin: 10px;
+
                 display: flex;
                 
                 position: fixed;
@@ -423,4 +425,5 @@
     </script>
 </body>
 </html>
+
 
