--- a/files.html
+++ b/files.html
@@ -324,7 +324,7 @@
 
         @media (max-width: 900px) and (orientation: portrait) {
             body::before {
-                content: "Please rotate your device to landscape mode.";
+                content: "Please rotate your device to landscape mode to use the application.";
                 font-size: 20px;
 
                 color: white;
@@ -332,8 +332,6 @@
 
                 width: 100vw;
                 height: 100vh;
-
-                margin: 10px;
 
                 display: flex;
                 
@@ -425,5 +423,6 @@
     </script>
 </body>
 </html>
+
 
 
