--- a/files.html
+++ b/files.html
@@ -326,6 +326,7 @@
             body::before {
                 content: "Please rotate your device to landscape mode to use the application.";
                 font-size: 20px;
+                font-weight: bold;
 
                 color: white;
                 background: #ffb570;
@@ -423,6 +424,7 @@
     </script>
 </body>
 </html>
+
 
 
 
